move tl-text-sm

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5516,6 +5516,25 @@ html :where(img[class*='wp-image-']) {
   color: var(--tl-color, #222) !important;
   -webkit-line-clamp: var(--tl-line-clamp) !important;
 }
+.tl-text-sm {
+  white-space: pre-line !important;
+  max-width: 100% !important;
+  font-size: var(--tl-font-size, 14px) !important;
+  font-weight: var(--tl-font-weight, 400) !important;
+  letter-spacing: var(--tl-letter-spacing, 0) !important;
+  line-height: var(--tl-line-height) !important;
+  color: var(--tl-color, #717171) !important;
+  -webkit-line-clamp: 2 !important;
+  overflow: hidden !important;
+  display: -webkit-box !important;
+  -moz-box-orient: vertical !important;
+  text-overflow: ellipsis !important;
+}
+@supports (overflow: clip) {
+  .tl-text-sm {
+    overflow: clip !important;
+  }
+}
 
 /*! FOOTER COMPONENT */
 .footer__links:not(last-child) {
