fix explore calendar mobile footer spacing and rest of contents

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -7329,6 +7329,8 @@
   left: 0;
   margin: 0 12px 7px;
   right: 0;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 .dir.w1ih1ve7[class][class] {
   margin: 0;
@@ -65689,4 +65691,18 @@ label {
 }
 .dir.ccf8p5q[class][class] {
   margin-top: 24px;
+}
+._e5a5cx {
+  font-size: 12px;
+  padding: 0 2px;
+}
+._1i4a5vz {
+  display: inline-block;
+  position: relative;
+  top: 4px;
+  padding-right: 4px;
+}
+._15d5hz0 {
+  display: inline-block;
+  margin-left: 10px;
 }
